--- a/.github/workflows/chromium_only.yml
+++ b/.github/workflows/chromium_only.yml
@@ -38,8 +38,13 @@ jobs:
         && poetry config virtualenvs.create false \
         && poetry install --no-interaction --no-ansi
 
+    - name: Install Playwright browsers
+      run: |
+        poetry run playwright install chromium
+
     - name: Run tests
       run: poetry run pytest
+      continue-on-error: true
 
     - uses: actions/upload-artifact@v4
       if: always()
